# TopSpeed-Android

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  MULTIPLAYER_SETUP.md  README.md  copy_sounds.bat  create_icons.ps1  deploy.bat  deploy.sh  gradle.properties  gradlew.bat  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README_SOUNDS.md  topSpeedServerApi.js
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/cpp/android_audio/: AudioEngine.cpp  AudioEngine.h  Sound3D.cpp  Sound3D.h
app/src/main/cpp/game_logic/: Car.cpp  Car.h  RaceLogic.cpp  RaceLogic.h  Track.cpp  Track.h
app/src/main/java/com/topspeed/audio/: SettingsActivity.kt  TopSpeedActivity.kt  TopSpeedApplication.kt
app/src/main/java/com/topspeed/audio/accessibility/: TopSpeedAccessibilityService.kt
app/src/main/java/com/topspeed/audio/audio/: AudioEngine.kt  SoundPoolManager.kt  TTSManager.kt  VoiceAnnouncer.kt
app/src/main/java/com/topspeed/audio/car/: CarModel.kt
app/src/main/java/com/topspeed/audio/game/: GameLoop.kt  GameState.kt
app/src/main/java/com/topspeed/audio/input/: GestureController.kt  TiltController.kt
app/src/main/res/drawable/: edit_text_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  gestures.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
(+6 files in other folders)
